--- a/12_sprint_zaschita_dannih_clientov/notebook/safe_data_clients.ipynb
+++ b/12_sprint_zaschita_dannih_clientov/notebook/safe_data_clients.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Описание проекта\n",
+    "\n",
+    "Нужно защитить данные клиентов страховой компании «Хоть потоп».\n",
+    "Разработать такой метод преобразования данных, чтобы по ним было сложно восстановить персональную информацию. Обосновать корректность его работы.\n",
+    "\n",
+    "\n",
+    "Нужно защитить данные, чтобы при преобразовании качество моделей машинного обучения не ухудшилось. Подбирать наилучшую модель не требуется.\n",
+    "\n",
+    "### Описание данных\n",
+    "\n",
+    " - Набор данных находится в файле /datasets/insurance.csv.\n",
+    " - Признаки: пол, возраст и зарплата застрахованного, количество членов его семьи.\n",
+    " - Целевой признак: количество страховых выплат клиенту за последние 5 лет."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,19 +37,22 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "   Пол  Возраст  Зарплата  Члены семьи  Страховые выплаты\n0    1     41.0   49600.0            1                  0\n1    0     46.0   38000.0            1                  1\n2    0     29.0   21000.0            0                  0\n3    0     21.0   41700.0            2                  0\n4    1     28.0   26100.0            0                  0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Пол</th>\n      <th>Возраст</th>\n      <th>Зарплата</th>\n      <th>Члены семьи</th>\n      <th>Страховые выплаты</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>41.0</td>\n      <td>49600.0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>46.0</td>\n      <td>38000.0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>29.0</td>\n      <td>21000.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>21.0</td>\n      <td>41700.0</td>\n      <td>2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>28.0</td>\n      <td>26100.0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,6 +60,85 @@
    "source": [
     "data = pd.read_csv('https://code.s3.yandex.net/datasets/insurance.csv')\n",
     "data.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "features = data.drop('Страховые выплаты', axis=1)\n",
+    "target = data['Страховые выплаты']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=.02, random_state=25)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.29648173242842923\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "pred = model.predict(X_test)\n",
+    "print(r2_score(y_test, pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "После стандартного скейлера: 0.25756910603033767\n",
+      "После минмакс скейлера: -0.15590979525468085\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "\n",
+    "s_scaler = StandardScaler()\n",
+    "minmax_scaler = MinMaxScaler()\n",
+    "X_train_s_scaled = s_scaler.fit_transform(X_train)\n",
+    "X_train_minmax_scaled = minmax_scaler.fit_transform(X_train)\n",
+    "\n",
+    "model.fit(X_train_s_scaled, y_train)\n",
+    "pred = model.predict(s_scaler.fit_transform(X_test))\n",
+    "print(f\"После стандартного скейлера: {r2_score(y_test, pred)}\")\n",
+    "\n",
+    "model.fit(X_train_minmax_scaled, y_train)\n",
+    "pred = model.predict(minmax_scaler.fit_transform(X_test))\n",
+    "\n",
+    "print(f\"После минмакс скейлера: {r2_score(y_test, pred)}\")"
    ],
    "metadata": {
     "collapsed": false,
