--- a/13_sprint_car_cost_detection/notebook/car_market_value_prediction.ipynb
+++ b/13_sprint_car_cost_detection/notebook/car_market_value_prediction.ipynb
@@ -88,8 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                DateCrawled  Price VehicleType  RegistrationYear Gearbox  \\\n86085   2016-03-05 23:54:00   8300         NaN              2005  manual   \n118512  2016-03-30 08:56:41    995       wagon              2001  manual   \n234645  2016-04-03 20:49:36  12500       wagon              2008    auto   \n303080  2016-03-09 19:38:44  12999       sedan              2014    auto   \n304849  2016-03-31 20:46:59   1500       sedan              2007  manual   \n\n        Power    Model  Kilometer  RegistrationMonth  FuelType     Brand  \\\n86085       0      5er     150000                 11  gasoline       bmw   \n118512    102      v40     150000                  2  gasoline     volvo   \n234645    249     300c     150000                  3       lpg  chrysler   \n303080    120  2_reihe      40000                  1    petrol   peugeot   \n304849      0  octavia     150000                  7    petrol     skoda   \n\n       NotRepaired          DateCreated  NumberOfPictures  PostalCode  \\\n86085           no  2016-03-05 00:00:00                 0       63814   \n118512          no  2016-03-30 00:00:00                 0       85661   \n234645          no  2016-04-03 00:00:00                 0       98660   \n303080          no  2016-03-09 00:00:00                 0       14089   \n304849         yes  2016-03-31 00:00:00                 0       24640   \n\n                   LastSeen  \n86085   2016-04-06 01:46:10  \n118512  2016-04-01 02:17:53  \n234645  2016-04-05 21:46:49  \n303080  2016-03-15 07:16:34  \n304849  2016-03-31 20:46:59  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DateCrawled</th>\n      <th>Price</th>\n      <th>VehicleType</th>\n      <th>RegistrationYear</th>\n      <th>Gearbox</th>\n      <th>Power</th>\n      <th>Model</th>\n      <th>Kilometer</th>\n      <th>RegistrationMonth</th>\n      <th>FuelType</th>\n      <th>Brand</th>\n      <th>NotRepaired</th>\n      <th>DateCreated</th>\n      <th>NumberOfPictures</th>\n      <th>PostalCode</th>\n      <th>LastSeen</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>86085</th>\n      <td>2016-03-05 23:54:00</td>\n      <td>8300</td>\n      <td>NaN</td>\n      <td>2005</td>\n      <td>manual</td>\n      <td>0</td>\n      <td>5er</td>\n      <td>150000</td>\n      <td>11</td>\n      <td>gasoline</td>\n      <td>bmw</td>\n      <td>no</td>\n      <td>2016-03-05 00:00:00</td>\n      <td>0</td>\n      <td>63814</td>\n      <td>2016-04-06 01:46:10</td>\n    </tr>\n    <tr>\n      <th>118512</th>\n      <td>2016-03-30 08:56:41</td>\n      <td>995</td>\n      <td>wagon</td>\n      <td>2001</td>\n      <td>manual</td>\n      <td>102</td>\n      <td>v40</td>\n      <td>150000</td>\n      <td>2</td>\n      <td>gasoline</td>\n      <td>volvo</td>\n      <td>no</td>\n      <td>2016-03-30 00:00:00</td>\n      <td>0</td>\n      <td>85661</td>\n      <td>2016-04-01 02:17:53</td>\n    </tr>\n    <tr>\n      <th>234645</th>\n      <td>2016-04-03 20:49:36</td>\n      <td>12500</td>\n      <td>wagon</td>\n      <td>2008</td>\n      <td>auto</td>\n      <td>249</td>\n      <td>300c</td>\n      <td>150000</td>\n      <td>3</td>\n      <td>lpg</td>\n      <td>chrysler</td>\n      <td>no</td>\n      <td>2016-04-03 00:00:00</td>\n      <td>0</td>\n      <td>98660</td>\n      <td>2016-04-05 21:46:49</td>\n    </tr>\n    <tr>\n      <th>303080</th>\n      <td>2016-03-09 19:38:44</td>\n      <td>12999</td>\n      <td>sedan</td>\n      <td>2014</td>\n      <td>auto</td>\n      <td>120</td>\n      <td>2_reihe</td>\n      <td>40000</td>\n      <td>1</td>\n      <td>petrol</td>\n      <td>peugeot</td>\n      <td>no</td>\n      <td>2016-03-09 00:00:00</td>\n      <td>0</td>\n      <td>14089</td>\n      <td>2016-03-15 07:16:34</td>\n    </tr>\n    <tr>\n      <th>304849</th>\n      <td>2016-03-31 20:46:59</td>\n      <td>1500</td>\n      <td>sedan</td>\n      <td>2007</td>\n      <td>manual</td>\n      <td>0</td>\n      <td>octavia</td>\n      <td>150000</td>\n      <td>7</td>\n      <td>petrol</td>\n      <td>skoda</td>\n      <td>yes</td>\n      <td>2016-03-31 00:00:00</td>\n      <td>0</td>\n      <td>24640</td>\n      <td>2016-03-31 20:46:59</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv('https://code.s3.yandex.net/datasets/autos.csv')\n",
     "data.name = 'Cars'\n",
@@ -98,8 +108,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -112,21 +121,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "data.info()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
     }
    }
   },
