--- a/15_sprint_toxic_comments_tedect/notebook/toxic_comment_detect.ipynb
+++ b/15_sprint_toxic_comments_tedect/notebook/toxic_comment_detect.ipynb
@@ -14,6 +14,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "import torch\n",
+    "import transformers\n",
+    "\n",
     "from pymystem3.mystem import Mystem\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
    ]
