--- a/habr_research/auto_impute/auto_ipute.ipynb
+++ b/habr_research/auto_impute/auto_ipute.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -78,6 +78,29 @@
     "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'y'.isalpha()"
    ],
    "metadata": {
     "collapsed": false,
